front pour la gestion des groupes

--- a/sources/src/scss/main.scss
+++ b/sources/src/scss/main.scss
@@ -18,3 +18,5 @@
 @use "components/navbar";
 @use "components/form";
 @use "components/spinner";
+@use "components/groupList";
+@use "components/popup";
