correction des breakpoints

--- a/sources/src/scss/components/_banner.scss
+++ b/sources/src/scss/components/_banner.scss
@@ -49,7 +49,7 @@
         }
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: map-get($breakpoints,md)) {
         &__title {
             font-size: 1.5rem;
         }
