--- a/sources/src/scss/components/_navbar.scss
+++ b/sources/src/scss/components/_navbar.scss
@@ -51,7 +51,7 @@
         display: none;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: map-get($breakpoints,md)) {
         &__toggle {
             display: block;
         }
