Améliorations mineur front

--- a/sources/src/scss/components/_popup.scss
+++ b/sources/src/scss/components/_popup.scss
@@ -15,7 +15,9 @@
     justify-content: center;
     align-items: center;
 
-
+    &--open {
+        display: flex;
+    }
 
     &--content {
         background: white;
