--- a/sources/src/scss/components/_button.scss
+++ b/sources/src/scss/components/_button.scss
@@ -1,12 +1,16 @@
 @use "../partials/functions" as f;
+@use "../partials/variables" as v;
 @use "../partials/mixins" as m;
+@use "sass:map";
+
+
 @layer components {
 	body .button {
 		@include m.resetA;
 		@include m.resetButton;
 		padding: f.rem(10) f.rem(16);
 		display: inline-block;
-		background-color: var(--black);
+		background-color: map.get(v.$colors, "green");
 		color: var(--white);
 		font-size: f.rem(16);
 		line-height: f.rem(18);
@@ -15,31 +19,39 @@
 		transition: all 0.3s;
 
 		&:hover {
-			background-color: var(--black-hover);
+			background-color: map.get(v.$colors, "light-green");
 		}
+
 		// classes modificatrices de couleur
 		&--primary {
 			background-color: var(--blue-500);
+
 			&:hover {
 				background-color: var(--blue-400);
 			}
 		}
+
 		&--secondary {
 			background-color: var(--grey-500);
+
 			&:hover {
 				background-color: var(--grey-400);
 			}
 		}
+
 		&--danger {
 			background-color: var(--red-500);
+
 			&:hover {
 				background-color: var(--red-400);
 			}
 		}
+
 		// classes modificatrices de taille
 		&--lg {
 			padding: f.rem(16) f.rem(24);
 		}
+
 		&--sm {
 			padding: f.rem(8) f.rem(12);
 			font-size: f.rem(14);
