--- a/sources/src/scss/components/_navbar.scss
+++ b/sources/src/scss/components/_navbar.scss
@@ -11,6 +11,7 @@
     width: 100%;
     box-shadow: $box-shadow;
     position: relative;
+    z-index: 2;
 
     &__logo {
         font-size: 1.5rem;
@@ -34,7 +35,7 @@
             }
         }
 
-        p{
+        p {
             margin: 0;
             color: white;
             text-decoration: none;
@@ -51,7 +52,7 @@
         display: none;
     }
 
-    @media (max-width: map-get($breakpoints,md)) {
+    @media (max-width: map-get($breakpoints, md)) {
         &__toggle {
             display: block;
         }
