--- a/sources/src/scss/partials/_variables.scss
+++ b/sources/src/scss/partials/_variables.scss
@@ -51,9 +51,10 @@ $colors: (
 
 // Theme colors
 $bg-light: #f9fafb;
-$bg-dark: #111827;
-$text-light: #1f2937;
+$bg-dark: #333333;
+$text-light: #333333;
 $text-dark: #f9fafb;
+
 
 
 $shades: (
