--- a/sources/src/scss/components/_button.scss
+++ b/sources/src/scss/components/_button.scss
@@ -40,6 +40,16 @@
 		&--lg {
 			padding: f.rem(16) f.rem(24);
 		}
+		&--icon {
+			display: flex;
+			align-items: center;
+			gap: f.rem(8);
+
+			svg {
+				width: f.rem(16);
+				height: f.rem(16);
+			}
+		}
 		&--sm {
 			padding: f.rem(8) f.rem(12);
 			font-size: f.rem(14);
