ajout d'un background img + favicon

--- a/sources/src/scss/partials/_variables.scss
+++ b/sources/src/scss/partials/_variables.scss
@@ -9,6 +9,7 @@ $primary-color: #4CAF50;
 $secondary-color: #45a049;
 $input-border: #ccc;
 
+
 // Espacements (convertis en rem)
 $spacing-medium: 1.25rem;
 $spacing-small: 0.625rem;
@@ -54,6 +55,7 @@ $bg-light: #f9fafb;
 $bg-dark: #333333;
 $text-light: #333333;
 $text-dark: #f9fafb;
+$black-transparent: #00000099;
 
 $shades: (
 	950: 8%,
