--- a/sources/src/scss/components/_banner.scss
+++ b/sources/src/scss/components/_banner.scss
@@ -5,16 +5,18 @@
 @use "sass:color";
 
 .banner {
+    position: relative;
     width: 100%;
     height: 100vh; // Plein écran
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/images/banner.jpg') no-repeat center center/cover;
+    background: url('/assets/images/background.jpg') no-repeat center center/cover;
     color: white;
     padding: 2rem;
     position: relative;
+
 
     &__content {
         max-width: f.rem(800);
@@ -22,23 +24,39 @@
     }
 
     &__title {
+        position: relative;
         font-size: 2rem;
         font-weight: bold;
         margin-bottom: 1rem;
         text-transform: uppercase;
+        z-index: 99;
+        animation: fadeIn 1.5s ease-in-out;
     }
 
     &__subtitle {
         font-size: 1.2rem;
         opacity: 0.8;
         margin-bottom: 2rem;
+        z-index: 99;
+
+    }
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: $black-transparent;
+
     }
 
     &__cta {
         display: inline-block;
         padding: 1rem 2rem;
         background: $primary-color;
-        color: white;
+        color: $text-dark;
         border-radius: $border-radius;
         text-decoration: none;
         font-size: 1rem;
@@ -47,6 +65,7 @@
         &:hover {
             background: color.adjust($primary-color, $lightness: -10%)
         }
+
     }
 
     @media (max-width: map-get($breakpoints, md)) {
@@ -61,16 +80,22 @@
         }
     }
 
+    @media (width >=f.screen(sm)) {
+        aspect-ratio: 100 / 42;
+    }
+
     // Animation légère pour un effet d'apparition
     @keyframes fadeIn {
         from {
             opacity: 0;
             transform: translateY(f.rem(20));
+
         }
 
         to {
             opacity: 1;
             transform: translateY(0);
+
         }
     }
 }
