Upgrade du front sur la page show des groupes + divers fixs

--- a/sources/src/scss/main.scss
+++ b/sources/src/scss/main.scss
@@ -20,4 +20,7 @@
 @use "components/form";
 @use "components/spinner";
 @use "components/groupList";
+@use "components/groupMember";
+@use "components/groupMemberAdd";
 @use "components/popup";
+@use "components/photoGallery";
