--- a/sources/src/scss/components/_navbar.scss
+++ b/sources/src/scss/components/_navbar.scss
@@ -11,7 +11,9 @@
     align-items: center;
     width: 100%;
     box-shadow: $box-shadow;
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: 2;
 
     &__logo {
