--- a/sources/src/scss/partials/_globals.scss
+++ b/sources/src/scss/partials/_globals.scss
@@ -38,8 +38,12 @@
 			background-color: var(--bg-color);
 			color: var(--text-color);
 			min-height: 100vh;
-			overflow: hidden;
+			// overflow: hidden;
 			transition: background-color 0.3s ease, color 0.3s ease;
+			&::-webkit-scrollbar {
+				width: f.rem(0);
+				height: f.rem(0);
+			}
 		}
 
 		input {
