--- a/sources/src/scss/partials/_variables.scss
+++ b/sources/src/scss/partials/_variables.scss
@@ -56,6 +56,12 @@ $bg-dark: #333333;
 $text-light: #333333;
 $text-dark: #f9fafb;
 $black-transparent: #00000099;
+$gold-light: #f0c929;
+$gold-dark: #50430e;
+$blue-light: #29b6f6;
+$blue-dark: #114963;
+$gray-light: #e0e0e0;
+$gray-dark: #797979;
 
 $shades: (
 	950: 8%,
